--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -18,6 +18,17 @@
   <title></title>
 </head>
 <body>
+  <header>
+    <form action="/auth/signin" method="get">
+    <button type="submit" >Login</button>
+    </form>
+
+    <br>
+
+    <form action="/auth/logout" method="get">
+    <button type="submit" >Logout</button>
+    </form>
+  </header>
   <%= yield %>
 </body>
 </html>
