--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -1,9 +1,10 @@
 <h2> Create a New Reflection</h2>
 
 <form action="/review/new" method="post">
-  Book Tile To Reflect On: <input type="text" placeholder="Title" name="book_title">
-  Author: <input type="text" placeholder="Author" name="author">
-  When Did You Start Reading This Title? <input type="text" placeholder="Star" name="author">
-
-
+  Book Tile To Reflect On: <input type="text" placeholder="Title" name="book_title"> <br>
+  Author: <input type="text" placeholder="Author" name="author"> <br>
+  When Did You Start Reading This Title? <input type="date" name="start_date"> <br>
+  When Did You Finish Reading This Title? <input type="date" name="finish_date"> <br>
+  Reflect Here: <input type="text" placeholder="Tell us all of your book-related feelings" name="book_title" class="reflection_text"> <br>
+  On a Scale of 1-5, How much did you love this book? <input type="text" placeholder="Rating" name="book_rating">
 </form>
