Finish review new post route and create review show view

--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -5,6 +5,7 @@
   Author: <input type="text" placeholder="Author" name="author"> <br>
   When Did You Start Reading This Title? <input type="date" name="start_date"> <br>
   When Did You Finish Reading This Title? <input type="date" name="finish_date"> <br>
-  Reflect Here: <input type="text" placeholder="Tell us all of your book-related feelings" name="book_title" class="reflection_text"> <br>
-  On a Scale of 1-5, How much did you love this book? <input type="text" placeholder="Rating" name="book_rating">
+  Reflect Here: <input type="text" placeholder="Tell us all of your book-related feelings" name="review_content" class="reflection_text"> <br>
+  On a Scale of 1-5, How much did you love this book? <input type="text" placeholder="Rating" name="book_rating"> <br> <br>
+  <button type="submit" >Submit Your Reflection</button>
 </form>
