--- a/app/views/review/show.erb
+++ b/app/views/review/show.erb
@@ -1,28 +1,29 @@
 <p> On reflection show page <p>
 
-<h2><%=@current_reflection.user.name%>'s Reflection on: <%=@current_reflection.book_title%></h2>
+<h2><%=@current_review.user.name%>'s Reflection on: <%=@current_review.book_title%></h2>
 
-<p>Book's Author: <%=@current_reflection.author%><p>
+<p>Book's Author: <%=@current_review.author%><p>
 
 
-<p>Personal Rating: <%=@current_reflection.book_rating%><p>
-<p>Started Reading This Title: <%=@current_reflection.start_date%><p>
-<p>Finished Reading This Title: <%=@current_reflection.finish_date%><p>
-<p>Finished Reading This Title: <%=@current_reflection.finish_date%><p>
+<p>Personal Rating: <%=@current_review.book_rating%><p>
+<p>Started Reading This Title: <%=@current_review.start_date%><p>
+<p>Finished Reading This Title: <%=@current_review.finish_date%><p>
+<p>Finished Reading This Title: <%=@current_review.finish_date%><p>
 
 <h4>Reflection</h4>
-<%=@current_reflection.review_content%>
+<%=@current_review.review_content%>
 
 <h4>Comments</h4>
 
-<form action="/comment/new" method="get">
+<form id="add_comment" action="/review/<%=@current_review.id%>/comment/_new" method="get">
   <button type="submit">Add Comment</button>
 </form>
 
 
+
 <div id="comment_list">
   <ol>
-  <%@current_reflection.comments.each do |comment|%>
+  <%@current_review.comments.each do |comment|%>
     <li>
       <%=comment.content%>
       <br>
