--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -13,6 +13,6 @@
   <button type="submit" >Create Reflection</button>
 </form>
 
-<form action="" method="get">
+<form action="/review/all" method="get">
   <button type="submit" >See Other Reflections</button>
 </form>
