--- a/app/views/review/all.erb
+++ b/app/views/review/all.erb
@@ -1,3 +1,10 @@
-<!-- "on all reflections page"
-<h3> </h3>
- -->
+<h2>Recent Reflections from Other Book Lovers</h2>
+
+<ol>
+  <% @all_reviews.each do |review| %>
+    <li>
+      <a href="/review/<%=review.id%>"><%=review.book_title%></a>
+      <p>By: <a href="/user/<%=review.user.id%>"><%=review.user.name%></a> </p>
+    </li>
+    <%end%>
+</ol>
