Added second ajax call attempt for post. Does not work properly yet.

--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -14,5 +14,5 @@
 </form>
 
 <form action="/review/all" method="get">
-  <button type="submit" >See Other Reflections</button>
+  <button type="submit" >See All Reflections</button>
 </form>
