--- a/app/views/comment/_new.erb
+++ b/app/views/comment/_new.erb
@@ -1,6 +1,5 @@
-
 <p>Enter your comment here:</p>
-<form id="submit_comment" action="/review/<%=@current_review.id%>/comment" method="post">
+<form id="submit_comment" action="/review/<%=@parent_review_id%>/comment" method="post">
   <input type="text" name="content" placeholder="Comment Text"> <br> <br>
   <input type="submit" value="Submit Comment">
 </form>
